Bug 1800422: Fixed z-index for custom-dropdown
behatnotneeded

--- a/htdocs/theme/raw/sass/components/_custom-dropdown.scss
+++ b/htdocs/theme/raw/sass/components/_custom-dropdown.scss
@@ -5,7 +5,7 @@
 
     > ul {
         // hidden list
-        z-index: 4; // to go over at least .inner-link elements
+        z-index: 5; // to go over at least .inner-link elements and .btn-group-top
         position: absolute;
         top: calc(100% - 1px);
         width: 100%;
